--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/robots.txt",
-              "src/sitemap.xml",
-              "src/.htaccess",
-              "src/404.html"
+              "src/sitemap.xml"
             ],
-            
             "styles": [
               "src/styles.css"
             ],
